fix: finish first training, need to fix overfitting

--- a/section-14-introduction-to-neural-networks/dog_vision.ipynb
+++ b/section-14-introduction-to-neural-networks/dog_vision.ipynb
@@ -7021,10 +7021,199 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Creating callbacks"
+      ],
+      "metadata": {
+        "id": "BW-S6WBTDoj6"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### TensorBoard Callbacks\n"
+      ],
+      "metadata": {
+        "id": "DlRIbjsaKKJe"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Load TensorBoard notebook extension\n",
+        "%load_ext tensorboard\n"
+      ],
+      "metadata": {
+        "id": "vl0e2rZrKaoo"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import datetime\n",
+        "\n",
+        "def create_tensorboard_callback():\n",
+        "  logdir = os.path.join(\"drive/My Drive/Dog Vision/logs\",\n",
+        "                        datetime.datetime.now().strftime(\"%Y%m%d-%H%M%S\"))\n",
+        "  return tf.keras.callbacks.TensorBoard(logdir)"
+      ],
+      "metadata": {
+        "id": "7TO0S-jTKq31"
+      },
+      "execution_count": 45,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Early Stopping Callback\n",
+        "\n",
+        "Early stopping heps stop our model from overfitting by stoping training if a certain evaluation metrisc stopping"
+      ],
+      "metadata": {
+        "id": "n0ccAvsZLNia"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create early stopping callback\n",
+        "early_stopping = tf.keras.callbacks.EarlyStopping(monitor=\"val_accuracy\",\n",
+        "                                                  patience=3)"
+      ],
+      "metadata": {
+        "id": "Z2m77yUfLurx"
+      },
+      "execution_count": 46,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Training a model (on subset of data)\n",
+        "\n",
+        "Our first model is only going to train on 1000 images, to make sure everything is working"
+      ],
+      "metadata": {
+        "id": "cjLcAzhpMD24"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "NUM_EPOCHS = 100 #@param {type: \"slider\", min:10, max:100, step:10}"
+      ],
+      "metadata": {
+        "id": "ajYs_ozmMXDQ"
+      },
+      "execution_count": 47,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Check for GPU availability\n",
+        "print(\"GPU\", \"available\" if tf.config.list_physical_devices(\"GPU\") else \"not available\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "e9RD1xB0M447",
+        "outputId": "6a3f2e1b-6d8e-4cdf-a9d4-aea8616f715a"
+      },
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "GPU available\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Build a function to train and return a trained model\n",
+        "def train_model():\n",
+        "  \"\"\"\n",
+        "  Trains a given model and returns the trained version.\n",
+        "  \"\"\"\n",
+        "  # Create a model\n",
+        "  model = create_model()\n",
+        "\n",
+        "  # Create new TensorBoard session everytime we train a model\n",
+        "  tensorboard = create_tensorboard_callback()\n",
+        "\n",
+        "  # Fit the model to the data passing it the callbacks we created\n",
+        "  model.fit(x=train_data,\n",
+        "            epochs=NUM_EPOCHS,\n",
+        "            validation_data=val_data,\n",
+        "            validation_freq=1,\n",
+        "            callbacks=[tensorboard, early_stopping])\n",
+        "  # Return the fitted model\n",
+        "  return model"
+      ],
+      "metadata": {
+        "id": "ZysilzCrM-IE"
+      },
+      "execution_count": 54,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Fit the model to the data\n",
+        "model = train_model()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5dlEjohNNlG-",
+        "outputId": "52aad7a4-51fd-44f2-8527-a29765b0d9a6"
+      },
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Building model with: https://tfhub.dev/google/imagenet/mobilenet_v2_130_224/classification/4\n",
+            "Epoch 1/100\n",
+            "25/25 [==============================] - 109s 4s/step - loss: 4.5250 - accuracy: 0.1125 - val_loss: 3.4524 - val_accuracy: 0.2250\n",
+            "Epoch 2/100\n",
+            "25/25 [==============================] - 4s 174ms/step - loss: 1.6369 - accuracy: 0.7237 - val_loss: 2.2536 - val_accuracy: 0.4600\n",
+            "Epoch 3/100\n",
+            "25/25 [==============================] - 4s 178ms/step - loss: 0.5659 - accuracy: 0.9413 - val_loss: 1.7364 - val_accuracy: 0.5600\n",
+            "Epoch 4/100\n",
+            "25/25 [==============================] - 4s 179ms/step - loss: 0.2479 - accuracy: 0.9900 - val_loss: 1.5529 - val_accuracy: 0.6050\n",
+            "Epoch 5/100\n",
+            "25/25 [==============================] - 5s 193ms/step - loss: 0.1451 - accuracy: 0.9962 - val_loss: 1.4552 - val_accuracy: 0.6200\n",
+            "Epoch 6/100\n",
+            "25/25 [==============================] - 4s 171ms/step - loss: 0.0995 - accuracy: 1.0000 - val_loss: 1.4161 - val_accuracy: 0.6300\n",
+            "Epoch 7/100\n",
+            "25/25 [==============================] - 4s 176ms/step - loss: 0.0742 - accuracy: 1.0000 - val_loss: 1.3939 - val_accuracy: 0.6400\n",
+            "Epoch 8/100\n",
+            "25/25 [==============================] - 4s 151ms/step - loss: 0.0591 - accuracy: 1.0000 - val_loss: 1.3705 - val_accuracy: 0.6350\n",
+            "Epoch 9/100\n",
+            "25/25 [==============================] - 4s 157ms/step - loss: 0.0485 - accuracy: 1.0000 - val_loss: 1.3475 - val_accuracy: 0.6300\n",
+            "Epoch 10/100\n",
+            "25/25 [==============================] - 4s 155ms/step - loss: 0.0412 - accuracy: 1.0000 - val_loss: 1.3312 - val_accuracy: 0.6350\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "BW-S6WBTDoj6"
+        "id": "x159cZBEODhL"
       },
       "execution_count": null,
       "outputs": []
